# rust-yt-downloader

./: .gitignore  CI_CD_SETUP.md  CLAUDE.md  CONFIGURATION_DEPENDENCY.md  Cargo.toml  LICENSE  README.md  SETUP_COMPLETE.md
.github/workflows/: ci.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/advanced/: ffmpeg.md  format-conversion.md  quality-selection.md  templates.md
docs/src/dev/: architecture.md  contributing.md  error-handling.md  modules.md  testing.md
docs/src/guide/: configuration.md  downloading-videos.md  extracting-audio.md  installation.md  playlists.md  quick-start.md
docs/src/reference/: cli-commands.md  config-options.md  formats.md
src/: cli.rs  config.rs  downloader.rs  error.rs  lib.rs  main.rs  progress.rs  utils.rs
src/media/: audio.rs  converter.rs  ffmpeg.rs  mod.rs
src/youtube/: client.rs  metadata.rs  mod.rs  playlist.rs  ytdlp.rs
tests/: audio_tests.rs  cli_tests.rs  config_tests.rs  download_tests.rs  info_tests.rs  playlist_tests.rs
tests/common/: mod.rs
